test/files/pos/t7232f/q.scala

package p

class D {
  def ok() = ()
}
