test/files/neg/protected-static-fail/S0.scala
package bippy

object S1 {
  protected def f1() = "hi mom"
}

class S2 {
  protected def f2() = "hi mom"
}